--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
 		/* Efecto de máscara para oscurecer el fondo excepto el recuadro */
 		.scanner-mask {
-			box-shadow: 0 0 0 9999px rgba(0, 0, 0, 0.85);
+			box-shadow: 0 0 0 9999px rgb(0, 0, 0);
 		}
 
 		/* Animación de la línea láser */
