--- a/index.html
+++ b/index.html
@@ -5264,9 +5264,25 @@ async function loadProfesores() {
 		 * Se llama al entrar a la vista o después de un escaneo.
 		 */
 		async function fetchAccesos() {
-			const res = await apiFetch('/acceso/historial'); // Asegúrate que este endpoint exista en tu FastAPI
+			const res = await apiFetch('/acceso/historial'); 
 			if (!res.error && Array.isArray(res)) {
-				state.accesos = res;
+				// Mapeamos los resultados para corregir la fecha de cada uno
+				state.accesos = res.map(acc => {
+					return {
+						...acc,
+						// Creamos una nueva propiedad con la fecha ya corregida
+						fecha_local: new Date(acc.fecha).toLocaleString('es-AR', {
+							timeZone: 'America/Argentina/Buenos_Aires',
+							day: '2-digit',
+							month: '2-digit',
+							year: 'numeric',
+							hour: '2-digit',
+							minute: '2-digit',
+							second: '2-digit',
+							hour12: false
+						})
+					};
+				});
 				renderAccesos();
 			} else if (res.error) {
 				console.error("Error al traer historial:", res.error);
