--- a/index.html
+++ b/index.html
@@ -5268,23 +5268,17 @@ async function loadProfesores() {
 			
 			if (!res.error && Array.isArray(res)) {
 				state.accesos = res.map(acc => {
-					// TRUCO: Si la fecha no trae 'Z' ni 'T', se la agregamos para que JS sepa que es UTC
-					// Reemplazamos el espacio por 'T' y agregamos 'Z' al final
-					const fechaLimpia = acc.fecha.replace(" ", "T") + "Z";
-					const objetoFecha = new Date(fechaLimpia);
-
+					// Como la DB ya manda la hora bien, tratamos el string directamente
+					// para evitar que el navegador aplique desfases UTC.
+					let fechaTexto = acc.fecha || '';
+					
+					// Limpiamos el formato (quitamos T y Z si existen)
+					const fechaLimpia = fechaTexto.replace('Z', '').replace('T', ' ');
+					
 					return {
 						...acc,
-						// Esta propiedad es la que debes usar en tu renderAccesos()
-						fecha_local: objetoFecha.toLocaleString('es-AR', {
-							timeZone: 'America/Argentina/Buenos_Aires',
-							day: '2-digit',
-							month: '2-digit',
-							year: 'numeric',
-							hour: '2-digit',
-							minute: '2-digit',
-							hour12: false
-						})
+						// Creamos la propiedad fecha_local con los primeros 16 caracteres (AAAA-MM-DD HH:MM)
+						fecha_local: fechaLimpia.substring(0, 16) 
 					};
 				});
 				renderAccesos();
@@ -5309,6 +5303,7 @@ async function loadProfesores() {
 				}
 
 				container.innerHTML = state.accesos.map(acc => {
+					// Lógica de estados
 					const isAuth = acc.estado === 'AUTHORIZED' || acc.estado === 'AUTORIZADO';
 					const statusColor = isAuth ? 'text-green-500' : 'text-red-500';
 					const bgColor = isAuth ? 'bg-green-500/10' : 'bg-red-500/10';
@@ -5327,15 +5322,15 @@ async function loadProfesores() {
 							<!-- DNI -->
 							<span class="text-[10px] font-bold text-gray-400">${acc.dni}</span>
 
-							<!-- Fecha y Hora -->
+							<!-- Fecha y Hora (CORREGIDO: usando fecha_local) -->
 							<div class="flex flex-col">
-								<span class="text-[10px] font-black text-white/80">${acc.fecha}</span>
+								<span class="text-[10px] font-black text-white/80">${acc.fecha_local}</span>
 							</div>
 
 							<!-- Método -->
 							<div class="flex items-center gap-2">
-								<i data-lucide="${acc.metodo.includes('QR') ? 'qr-code' : 'hard-drive'}" class="w-3 h-3 text-red-600"></i>
-								<span class="text-[9px] font-bold text-gray-500 uppercase">${acc.metodo}</span>
+								<i data-lucide="${acc.metodo && acc.metodo.includes('QR') ? 'qr-code' : 'hard-drive'}" class="w-3 h-3 text-red-600"></i>
+								<span class="text-[9px] font-bold text-gray-500 uppercase">${acc.metodo || 'S/D'}</span>
 							</div>
 
 							<!-- Estado -->
@@ -5350,7 +5345,6 @@ async function loadProfesores() {
 
 				if(window.lucide) lucide.createIcons();
 			}
-
 			/**
 			 * 3. REGISTRAR NUEVO ACCESO (LLAMADO DESDE EL ESCÁNER)
 			 * Actualiza la lista en tiempo real sin recargar.
