--- a/index.html
+++ b/index.html
@@ -5175,6 +5175,7 @@ async function loadProfesores() {
 
 		/**
 		 * UI: MOSTRAR RESULTADO BASADO EN EL COLOR DEL SERVIDOR
+		 * Ahora con soporte para Verde (OK), Amarillo (Vence), Azul (Staff) y Rojo (Error).
 		 */
 		function showFeedback(data) {
 			const overlay = document.getElementById('scanner-feedback-overlay');
@@ -5185,7 +5186,7 @@ async function loadProfesores() {
 
 			if (!overlay) return;
 
-			// Reset total de estilos
+			// Reset total de estilos antes de pintar el nuevo estado
 			overlay.classList.remove('hidden');
 			overlay.classList.add('flex');
 			overlay.style.boxShadow = "none";
@@ -5195,9 +5196,11 @@ async function loadProfesores() {
 			name.innerText = data.nombre || "DESCONOCIDO";
 			msg.innerText = data.message || "";
 
+			// Obtenemos el color que manda el Jefe (Backend)
 			const colorServidor = data.color || "red";
 
 			if (colorServidor === 'green') {
+				// --- ESTADO VERDE: ALUMNO AL DÍA ---
 				status.innerText = "ACCESO PERMITIDO";
 				status.className = "text-5xl font-black uppercase italic text-green-500 mb-2 tracking-wide text-center drop-shadow-[0_0_10px_#22c55e]";
 				overlay.style.boxShadow = "inset 0 0 150px rgba(34, 197, 94, 0.4)";
@@ -5206,15 +5209,25 @@ async function loadProfesores() {
 				playVikingSound('success');
 
 			} else if (colorServidor === 'yellow') {
-				// --- ESTADO AMARILLO ---
+				// --- ESTADO AMARILLO: PRÓXIMO A VENCER ---
 				status.innerText = "¡ATENCIÓN: VENCE PRONTO!";
 				status.className = "text-4xl font-black uppercase italic text-yellow-500 mb-2 tracking-wide text-center drop-shadow-[0_0_15px_#eab308]";
-				overlay.style.boxShadow = "inset 0 0 150px rgba(234, 179, 8, 0.5)"; // Resplandor amarillo
-				overlay.style.border = "8px solid #eab308"; // Marco amarillo grueso
+				overlay.style.boxShadow = "inset 0 0 150px rgba(234, 179, 8, 0.5)";
+				overlay.style.border = "8px solid #eab308";
 				icon.innerHTML = `<div class="w-32 h-32 bg-yellow-500 rounded-full flex items-center justify-center shadow-[0_0_60px_#eab308]"><i data-lucide="alert-triangle" class="w-16 h-16 text-black"></i></div>`;
-				playVikingSound('warning'); // <--- Esto hace el pitido doble
+				playVikingSound('warning');
+
+			} else if (colorServidor === 'blue') {
+				// --- ESTADO AZUL: STAFF (Administrativo, Profes, etc) ---
+				status.innerText = "ACCESO STAFF";
+				status.className = "text-5xl font-black uppercase italic text-blue-500 mb-2 tracking-wide text-center drop-shadow-[0_0_15px_#3b82f6]";
+				overlay.style.boxShadow = "inset 0 0 150px rgba(59, 130, 246, 0.4)";
+				overlay.style.border = "8px solid #3b82f6";
+				icon.innerHTML = `<div class="w-32 h-32 bg-blue-600 rounded-full flex items-center justify-center shadow-[0_0_60px_#3b82f6]"><i data-lucide="shield-check" class="w-16 h-16 text-white"></i></div>`;
+				playVikingSound('success'); // El sonido de staff es el de éxito
 
 			} else {
+				// --- ESTADO ROJO: DENEGADO / ERROR ---
 				status.innerText = "ACCESO DENEGADO";
 				status.className = "text-5xl font-black uppercase italic text-red-600 mb-2 tracking-wide text-center drop-shadow-[0_0_10px_#dc2626]";
 				overlay.style.boxShadow = "inset 0 0 150px rgba(220, 38, 38, 0.4)";
