--- a/index.html
+++ b/index.html
@@ -542,6 +542,9 @@
 
     <main id="main-content" class="flex-1 h-full overflow-y-auto hidden relative">
         <header class="h-24 border-b border-white/5 px-12 flex items-center justify-between sticky top-0 bg-black/70 backdrop-blur-2xl z-40">
+			<button class="mobile-menu-trigger" onclick="toggleMobileMenu()">
+				<i data-lucide="menu"></i>
+			</button>
             <div>
                 <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">GF Strength Hub</p>
                 <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter">Dashboard</h2>
@@ -5841,6 +5844,15 @@ async function loadProfesores() {
 				filterAlumnos('todos');
 			}
 
+			function toggleMobileMenu() {
+				const sidebar = document.getElementById('sidebar');
+				const overlay = document.getElementById('mobile-overlay');
+				
+				// Alternamos la clase que creamos en el CSS
+				sidebar.classList.toggle('mobile-open');
+				overlay.classList.toggle('active');
+			}
+
 			// 2. Función de Filtrado
 			window.filterAlumnos = function(filtro) {
 				if(!state.alumnos) return;
@@ -6021,5 +6033,9 @@ async function loadProfesores() {
 			if(window.lucide) lucide.createIcons();
 		};				
     </script>
+
+	<!-- Fondo oscuro para cerrar el menú al tocar afuera -->
+		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
+
 </body>
 </html>
