--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <title>GF Strength Hub</title>
 		<style>
     /* =================================================================
-       ESTILOS ORIGINALES (MANTENIDOS AL 100%)
-       ================================================================= */
+    ESTILOS ORIGINALES (MANTENIDOS AL 100%)
+    ================================================================= */
     body {
         font-family: 'Inter', sans-serif;
         background-color: #000000;
@@ -109,6 +109,7 @@
         opacity: 0.5;
     }
 
+    /* Lógica Sidebar Colapsada PC */
     .sidebar-collapsed { width: 80px !important; }
     .sidebar-collapsed .brand-text, 
     .sidebar-collapsed .user-details, 
@@ -267,60 +268,123 @@
     .animate-scan-line { animation: scan-line 2.5s linear infinite; }
 
     /* =================================================================
-       PARCHE DE ADAPTABILIDAD MOBILE (PRIORIDAD 2)
-       ================================================================= */
+    PARCHE DE ADAPTABILIDAD MOBILE (PRIORIDAD 2)
+    ================================================================= */
     @media (max-width: 1024px) {
-        body { overflow-y: auto !important; }
-
-        /* Sidebar: De lateral fijo a Menú Desplegable */
-        #sidebar {
-            position: fixed; left: -100%; top: 0; bottom: 0;
-            z-index: 100; width: 280px !important; display: flex !important;
-            transition: left 0.4s ease;
+        body {
+            overflow-y: auto !important; /* Habilitar scroll en móvil */
         }
-        #sidebar.mobile-open { left: 0; box-shadow: 20px 0 50px rgba(0,0,0,0.9); }
 
+        /* Sidebar: De lateral fijo a Menú Desplegable (Drawer) */
+        #sidebar {
+            position: fixed;
+            left: -100%; /* Oculto por defecto */
+            top: 0;
+            bottom: 0;
+            z-index: 100;
+            width: 280px !important;
+            display: flex !important;
+            transition: left 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        #sidebar.mobile-open {
+            left: 0;
+            box-shadow: 20px 0 50px rgba(0,0,0,0.9);
+        }
+
+        /* Overlay oscuro para cerrar el menú */
         .sidebar-overlay {
-            display: none; position: fixed; inset: 0;
-            background: rgba(0,0,0,0.8); backdrop-filter: blur(4px); z-index: 90;
+            display: none;
+            position: fixed;
+            inset: 0;
+            background: rgba(0,0,0,0.85);
+            backdrop-filter: blur(4px);
+            z-index: 90;
         }
         .sidebar-overlay.active { display: block; }
 
-        main { margin-left: 0 !important; width: 100% !important; padding-bottom: 100px; }
+        /* Contenido Principal: Ocupa todo el ancho */
+        main {
+            margin-left: 0 !important;
+            width: 100% !important;
+            padding-bottom: 100px;
+        }
 
-        /* HEADER MOBILE: Ajuste de padding para visibilidad del botón */
+        /* Header Mobile: Corregimos padding y visibilidad del botón */
         header {
             padding-left: 1rem !important; 
             padding-right: 1rem !important;
             height: 80px !important;
-            justify-content: flex-start !important;
-            gap: 15px;
+            justify-content: flex-start !important; /* Alineación para botón de menú */
+            gap: 12px;
         }
 
+        /* Grillas: De múltiples columnas a 1 columna (Vertical) */
         .grid-cols-2, .grid-cols-3, .grid-cols-4, .exercise-grid {
             grid-template-columns: 1fr !important;
             gap: 1rem !important;
         }
 
-        /* Calendario vertical en móvil */
-        .calendar-container { grid-template-columns: 1fr !important; height: auto !important; overflow: visible !important; }
-        .cal-header { position: sticky; top: 79px; z-index: 30; border-right: none !important; border-bottom: 1px solid rgba(255,255,255,0.1); }
-        .cal-cell { height: auto !important; min-height: 80px; border-right: none !important; }
-        
-        /* Badge de clase en móvil */
-        .class-badge { position: relative; height: auto !important; min-height: 60px; width: calc(100% - 20px); margin: 10px; }
+        /* El calendario en móvil se convierte en lista vertical infinita */
+        .calendar-container {
+            grid-template-columns: 1fr !important;
+            height: auto !important;
+            overflow: visible !important;
+        }
 
-        /* Tablas tipo tarjeta */
-        .viking-table-row { display: flex; flex-direction: column; padding: 1.5rem; gap: 0.5rem; }
-        
-        /* Modales responsivos */
-        .viking-modal > div { width: 95% !important; max-width: 95% !important; margin: 10px; border-radius: 2rem !important; }
+        .cal-header {
+            position: sticky;
+            top: 79px; /* Justo debajo del header */
+            z-index: 30;
+            border-right: none !important;
+            border-bottom: 1px solid rgba(255,255,255,0.1);
+        }
 
-        /* Botones táctiles */
-        button, .nav-item, .filter-btn { min-height: 48px; }
+        .cal-cell {
+            height: auto !important;
+            min-height: 80px;
+            border-right: none !important;
+            border-bottom: 1px solid rgba(255,255,255,0.05);
+        }
+
+        /* Badge de clase en móvil: Se estira al ancho de la celda */
+        .class-badge {
+            position: relative;
+            height: auto !important;
+            min-height: 60px;
+            width: calc(100% - 16px);
+            margin: 8px;
+        }
+
+        /* Tablas: Se vuelven bloques legibles tipo tarjeta */
+        .viking-table-row {
+            display: flex;
+            flex-direction: column;
+            padding: 1.25rem;
+            gap: 0.5rem;
+            border: 1px solid rgba(255,255,255,0.05);
+            border-radius: 1rem;
+            margin-bottom: 0.75rem;
+        }
+
+        /* Modales: Ajuste de ancho y redondeo para pantallas chicas */
+        .viking-modal > div {
+            width: 95% !important;
+            max-width: 95% !important;
+            margin: 10px;
+            border-radius: 2rem !important;
+            padding: 1.5rem !important;
+        }
+
+        /* Botones: Área táctil aumentada (Ley de Fitts para móviles) */
+        button, .nav-item, .filter-btn, .payment-method-btn {
+            min-height: 48px;
+        }
+
+        /* Esconder sidebar si se intenta colapsar en móvil */
         .sidebar-collapsed { width: 0 !important; overflow: hidden; }
 
-        /* BOTÓN DISPARADOR: Estilos corregidos para asegurar visibilidad */
+        /* Botón Disparador del Menú (Aseguramos que se vea) */
         .mobile-menu-trigger {
             display: flex !important;
             align-items: center;
@@ -335,10 +399,10 @@
             z-index: 50;
             flex-shrink: 0;
         }
-        .mobile-menu-trigger i { width: 24px; height: 24px; }
+        .mobile-menu-trigger i { width: 22px; height: 22px; }
     }
 
-    /* Ocultar disparador en Desktop */
+    /* Ocultar disparador en resoluciones de computadora */
     @media (min-width: 1025px) {
         .mobile-menu-trigger { display: none !important; }
     }
