--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <title>GF Strength Hub</title>
     
     <!-- Vinculación al CSS local (el archivo que te entrego abajo) -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
     
     <!-- Lógica del sistema desde tu CDN -->
     <script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
