--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <title>GF Strength Hub</title>
     
     <!-- TU CSS (Asegúrate de usar la versión actualizada que te pasé antes para el efecto app) -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
     <!-- NOTA: He movido el script.js al final del body para arreglar la carga de alumnos -->
 </head>
 <body class="flex h-screen w-screen overflow-hidden text-left bg-black selection:bg-red-600 selection:text-white">
