--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 
                 <form onsubmit="handleLogin(event)" class="space-y-4" autocomplete="off">
                     <!-- inputmode="numeric" fuerza el teclado numérico en móviles -->
-                    <input type="text" id="login-dni" placeholder="DNI" required class="viking-input" inputmode="numeric" pattern="[0-9]*">
+                    <input type="text" id="login-dni" placeholder="DNI" required class="viking-input">
                     <input type="password" id="login-pass" placeholder="Contraseña" required class="viking-input">
                     <button type="submit" id="login-button" class="w-full viking-bg-red text-black py-5 rounded-2xl font-black uppercase italic tracking-widest hover:scale-[1.02] active:scale-95 transition-all shadow-[0_0_20px_rgba(255,0,0,0.3)]">Entrar al Valhalla</button>
                 </form>
@@ -53,7 +53,7 @@
                 <p class="text-[10px] tracking-[0.2em] text-gray-500 uppercase mb-8">Recupera tu acceso</p>
                 
                 <form onsubmit="handleResetPassword(event)" class="space-y-4" autocomplete="off">
-                    <input type="text" id="reset-dni" placeholder="INGRESA TU DNI" required class="viking-input" inputmode="numeric" pattern="[0-9]*">
+                    <input type="text" id="reset-dni" placeholder="INGRESA TU DNI" required class="viking-input">
                     <input type="password" id="reset-pass-new" placeholder="NUEVA CONTRASEÑA" required class="viking-input">
                     <input type="password" id="reset-pass-confirm" placeholder="REPETIR CONTRASEÑA" required class="viking-input">
                     <button type="submit" id="reset-button" class="w-full bg-white text-black py-4 rounded-2xl font-black uppercase italic tracking-widest hover:scale-[1.02] active:scale-95 transition-all">Cambiar Contraseña</button>
