--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <title>GF Strength Hub</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tu-usuario/tu-repo@main/style.css">
 	<script src="https://cdn.jsdelivr.net/gh/tu-usuario/tu-repo@main/script.js"></script>
+	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
+	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
 </head>
 <body class="flex h-screen w-screen overflow-hidden text-left">
 
