--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GF Strength Hub</title>
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/tu-usuario/tu-repo@main/style.css">
-	<script src="https://cdn.jsdelivr.net/gh/tu-usuario/tu-repo@main/script.js"></script>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
+	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
 </head>
