--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<script src="https://unpkg.com/jsqr@1.4.0/dist/jsQR.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/jsqr@1.4.0/dist/jsQR.min.js"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
-    <title>GF Strength Hub</title>
+    <title>GYMFIT PRO</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
 	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
@@ -27,7 +27,7 @@
 
             <!-- FORMULARIO DE LOGIN -->
             <div id="login-form-container">
-                <h1 class="text-4xl font-black italic uppercase mb-2">GF <span class="viking-red">Hub</span></h1>
+                <h1 class="text-4xl font-black italic uppercase mb-2">GYMFIT <span class="viking-red">PRO</span></h1>
                 <p class="text-[11px] tracking-[0.5em] text-gray-500 uppercase mb-10">Acceso al Sistema</p>
                 
                 <form onsubmit="handleLogin(event)" class="space-y-4">
@@ -60,7 +60,7 @@
         <div class="p-8 flex items-center gap-4">
             <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Vikingo Hub" class="w-10 h-10 object-contain logo-viking-glow brand-text" onerror="this.style.display='none'">
             <h1 class="brand-text text-xl font-black italic uppercase leading-none">
-                GF<br><span class="viking-red text-xs tracking-[0.4em] font-bold">STRENGTH HUB</span>
+                GYMFIT<br><span class="viking-red text-xs tracking-[0.4em] font-bold">PRO</span>
             </h1>
             <!-- <button onclick="toggleSidebar()" class="p-2 hover:bg-white/5 rounded-lg transition-colors ml-auto">
                 <i data-lucide="menu" class="w-5 h-5 viking-red"></i>
@@ -185,7 +185,7 @@
 				<i data-lucide="menu"></i>
 			</button>
             <div>
-                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">GF Strength Hub</p>
+                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">GYMFIT PRO</p>
                 <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter">Dashboard</h2>
             </div>
             <div class="flex items-center gap-6">
