--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://unpkg.com/lucide@latest"></script>
     <title>GYMFIT PRO</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/style.css">
-	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
+	
 	<link rel="icon" type="image/png" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
 	<link rel="apple-touch-icon" href="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true">
 </head>
@@ -1286,6 +1286,9 @@
 				</div>
 	<!-- Fondo oscuro para cerrar el menú al tocar afuera -->
 		<div id="mobile-overlay" class="sidebar-overlay" onclick="toggleMobileMenu()"></div>
+
+	<!-- Script fuera para que tome la lista de alumnos -->
+	<script src="https://cdn.jsdelivr.net/gh/vikingo-44/Software-Gym/script.js"></script>
 
 </body>
 </html>
