--- a/index.html
+++ b/index.html
@@ -58,16 +58,6 @@
     </div>
 
     <aside id="sidebar" class="w-72 h-full glass-sidebar flex flex-col hidden z-50">
-        <div class="p-8 flex items-center gap-4">
-            <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Vikingo Hub" class="w-10 h-10 object-contain logo-viking-glow brand-text" onerror="this.style.display='none'">
-            <h1 class="brand-text text-xl font-black italic uppercase leading-none">
-                GYMFIT<br><span class="viking-red text-xs tracking-[0.4em] font-bold">PRO</span>
-            </h1>
-            <!-- <button onclick="toggleSidebar()" class="p-2 hover:bg-white/5 rounded-lg transition-colors ml-auto">
-                <i data-lucide="menu" class="w-5 h-5 viking-red"></i>
-            </button> -->
-        </div>
-
         <div class="px-6 mb-8">
             <div class="glass-card p-4 rounded-3xl flex items-center gap-4">
                 <div class="w-12 h-12 rounded-2xl viking-bg-red flex items-center justify-center font-black text-black text-xl italic shadow-lg shrink-0" id="user-initials">??</div>
@@ -176,23 +166,34 @@
 
     <main id="main-content" class="flex-1 h-full overflow-y-auto hidden relative">
         <header class="h-24 border-b border-white/5 px-12 flex items-center justify-between sticky top-0 bg-black/70 backdrop-blur-2xl z-40">
-			<button class="mobile-menu-trigger" onclick="toggleMobileMenu()">
-				<i data-lucide="menu"></i>
-			</button>
-            <div>
-                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic">GYMFIT PRO</p>
-                <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter">Dashboard</h2>
+            <button class="mobile-menu-trigger" onclick="toggleMobileMenu()">
+                <i data-lucide="menu"></i>
+            </button>
+            
+            <!-- SECCIÓN IZQUIERDA: TÍTULO -->
+            <div class="flex-1">
+                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic leading-none mb-1">GYMFIT PRO</p>
+                <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter leading-none">Dashboard</h2>
             </div>
-            <div class="flex items-center gap-6">
-                <div id="sync-status" class="flex items-center gap-3 bg-red-600/10 px-4 py-2 rounded-xl border border-red-600/20 text-white">
+
+            <!-- SECCIÓN CENTRAL: LOGO (NUEVO) -->
+            <div class="hidden md:flex flex-1 items-center justify-center gap-3">
+                <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Logo" class="w-8 h-8 object-contain logo-viking-glow">
+                <h1 class="text-lg font-black italic uppercase leading-tight tracking-tighter">
+                    GYMFIT <span class="viking-red">PRO</span>
+                </h1>
+            </div>
+
+            <!-- SECCIÓN DERECHA: STATUS Y SALIR -->
+            <div class="flex-1 flex items-center justify-end gap-6">
+                <div id="sync-status" class="hidden sm:flex items-center gap-3 bg-red-600/10 px-4 py-2 rounded-xl border border-red-600/20 text-white">
                     <span class="w-2 h-2 rounded-full bg-red-600 animate-pulse"></span>
                     <span class="text-[10px] font-black uppercase tracking-widest italic">Hub Sincronizado</span>
                 </div>
-				<!-- BOTÓN SALIR NUEVO -->
-				<button onclick="location.reload()" class="flex items-center gap-2 bg-red-600/10 hover:bg-red-600 text-red-500 hover:text-white px-3 py-2 md:px-4 md:py-2 rounded-xl border border-red-600/20 transition-all group" title="Cerrar Sesión">
-					<i data-lucide="log-out" class="w-4 h-4 group-hover:scale-110 transition-transform"></i>
-					<span class="text-[9px] font-black uppercase tracking-widest italic hidden md:inline">Salir</span>
-				</button>
+                <button onclick="location.reload()" class="flex items-center gap-2 bg-red-600/10 hover:bg-red-600 text-red-500 hover:text-white px-3 py-2 rounded-xl border border-red-600/20 transition-all group" title="Cerrar Sesión">
+                    <i data-lucide="log-out" class="w-4 h-4 group-hover:scale-110 transition-transform"></i>
+                    <span class="text-[9px] font-black uppercase tracking-widest italic hidden md:inline">Salir</span>
+                </button>
             </div>
         </header>
 
