--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
     </div>
 
     <aside id="sidebar" class="w-72 h-full glass-sidebar flex flex-col hidden z-50">
-        <div class="px-6 mb-8">
-            <div class="glass-card p-4 rounded-3xl flex items-center gap-4">
+        <div class="px-6 py-8"> <!-- Añadimos padding superior aquí -->
+            <div class="glass-card p-4 rounded-3xl flex items-center gap-4 border border-white/5">
                 <div class="w-12 h-12 rounded-2xl viking-bg-red flex items-center justify-center font-black text-black text-xl italic shadow-lg shrink-0" id="user-initials">??</div>
                 <div class="user-details text-left overflow-hidden">
-                    <p class="text-[12px] font-black uppercase truncate" id="side-user-name">Usuario Vikingo</p>
+                    <p class="text-[12px] font-black uppercase truncate text-white" id="side-user-name">Usuario Vikingo</p>
                     <p class="text-[9px] text-red-600 font-bold uppercase tracking-widest" id="side-user-role">Cargando...</p>
                 </div>
             </div>
