--- a/index.html
+++ b/index.html
@@ -165,38 +165,43 @@
     </aside>
 
     <main id="main-content" class="flex-1 h-full overflow-y-auto hidden relative">
-        <header class="h-24 border-b border-white/5 px-12 flex items-center justify-between sticky top-0 bg-black/70 backdrop-blur-2xl z-40">
-            <button class="mobile-menu-trigger" onclick="toggleMobileMenu()">
-                <i data-lucide="menu"></i>
-            </button>
-            
-            <!-- SECCIÓN IZQUIERDA: TÍTULO -->
-            <div class="flex-1">
-                <p id="breadcrumb" class="text-[10px] font-black text-red-600 uppercase tracking-[0.4em] italic leading-none mb-1">GYMFIT PRO</p>
-                <h2 id="view-title" class="text-2xl font-black uppercase italic tracking-tighter leading-none">Dashboard</h2>
-            </div>
+        <header class="h-28 border-b border-white/5 px-12 flex items-center justify-between sticky top-0 bg-black/80 backdrop-blur-2xl z-40">
+			<!-- Gatillo Menú Móvil -->
+			<button class="mobile-menu-trigger lg:hidden" onclick="toggleMobileMenu()">
+				<i data-lucide="menu"></i>
+			</button>
+			
+			<!-- SECCIÓN IZQUIERDA: Info de Vista (Más chica para no estorbar) -->
+			<div class="hidden lg:flex flex-1 flex-col">
+				<p id="breadcrumb" class="text-[9px] font-black text-gray-600 uppercase tracking-[0.4em] italic leading-none mb-1">CENTRAL DE MANDO</p>
+				<h2 id="view-title" class="text-lg font-black uppercase italic tracking-tighter leading-none text-white/30">Dashboard</h2>
+			</div>
 
-            <!-- SECCIÓN CENTRAL: LOGO (NUEVO) -->
-            <div class="hidden md:flex flex-1 items-center justify-center gap-3">
-                <img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" alt="Logo" class="w-8 h-8 object-contain logo-viking-glow">
-                <h1 class="text-lg font-black italic uppercase leading-tight tracking-tighter">
-                    GYMFIT <span class="viking-red">PRO</span>
-                </h1>
-            </div>
+			<!-- SECCIÓN CENTRAL: EL LOGO Y NOMBRE (BIEN GRANDES) -->
+			<div class="flex-[3] flex items-center justify-center gap-6">
+				<div class="relative group">
+					<img src="https://github.com/vikingo-44/Software-Gym/blob/main/logo.png?raw=true" 
+						alt="Logo" 
+						class="w-20 h-20 object-contain logo-viking-glow drop-shadow-[0_0_20px_rgba(255,0,0,0.6)] transition-transform duration-500 group-hover:scale-110">
+				</div>
+				<h1 class="text-6xl md:text-7xl font-black italic uppercase leading-none tracking-tighter text-white">
+					GYMFIT <span class="viking-red">PRO</span>
+				</h1>
+			</div>
 
-            <!-- SECCIÓN DERECHA: STATUS Y SALIR -->
-            <div class="flex-1 flex items-center justify-end gap-6">
-                <div id="sync-status" class="hidden sm:flex items-center gap-3 bg-red-600/10 px-4 py-2 rounded-xl border border-red-600/20 text-white">
-                    <span class="w-2 h-2 rounded-full bg-red-600 animate-pulse"></span>
-                    <span class="text-[10px] font-black uppercase tracking-widest italic">Hub Sincronizado</span>
-                </div>
-                <button onclick="location.reload()" class="flex items-center gap-2 bg-red-600/10 hover:bg-red-600 text-red-500 hover:text-white px-3 py-2 rounded-xl border border-red-600/20 transition-all group" title="Cerrar Sesión">
-                    <i data-lucide="log-out" class="w-4 h-4 group-hover:scale-110 transition-transform"></i>
-                    <span class="text-[9px] font-black uppercase tracking-widest italic hidden md:inline">Salir</span>
-                </button>
-            </div>
-        </header>
-
+			<!-- SECCIÓN DERECHA: Status y Salir -->
+			<div class="flex-1 flex items-center justify-end gap-6">
+				<div id="sync-status" class="hidden xl:flex items-center gap-3 bg-red-600/10 px-4 py-2 rounded-xl border border-red-600/20 text-white">
+					<span class="w-2 h-2 rounded-full bg-red-600 animate-pulse"></span>
+					<span class="text-[9px] font-black uppercase tracking-widest italic">Hub Sincronizado</span>
+				</div>
+				
+				<button onclick="location.reload()" class="flex items-center gap-3 bg-red-600/10 hover:bg-red-600 text-red-500 hover:text-white px-5 py-3 rounded-2xl border border-red-600/20 transition-all group" title="Cerrar Sesión">
+					<i data-lucide="log-out" class="w-6 h-6 group-hover:scale-110 transition-transform"></i>
+					<span class="text-[10px] font-black uppercase tracking-widest italic hidden lg:inline">Salir</span>
+				</button>
+			</div>
+		</header>
         <div id="views-container" class="p-10">
             <!-- DASHBOARD -->
             <div id="view-dashboard" class="view-content active">
